// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryList Component should handle expandable guests data: number of guests 1`] = `
<Table
  ariaLabel={null}
  borders={true}
  className="curiosity-inventory-list"
  columnHeaders={
    Array [
      "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
    ]
  }
  isHeader={true}
  rows={
    Array [
      Object {
        "cells": Array [
          "sit",
          "amet",
          1,
        ],
        "expandedContent": undefined,
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant="compact"
/>
`;

exports[`InventoryList Component should handle expandable guests data: number of guests, and id 1`] = `
<Table
  ariaLabel={null}
  borders={true}
  className="curiosity-inventory-list"
  columnHeaders={
    Array [
      "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"subscriptionManagerId\\"})",
    ]
  }
  isHeader={true}
  rows={
    Array [
      Object {
        "cells": Array [
          "sit",
          "amet",
          1,
          "loremIpsum",
        ],
        "expandedContent": <UNDEFINED
          filterGuestsData={Array []}
          id="loremIpsum"
          numberOfGuests={1}
          query={
            Object {
              "limit": 10,
              "offset": 0,
            }
          }
        />,
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant="compact"
/>
`;

exports[`InventoryList Component should handle expandable guests data: number of guests, id, and NO expandable guests display 1`] = `
<Table
  ariaLabel={null}
  borders={true}
  className="curiosity-inventory-list"
  columnHeaders={
    Array [
      "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"numberOfGuests\\"})",
      "t(curiosity-inventory.header, {\\"context\\":\\"subscriptionManagerId\\"})",
    ]
  }
  isHeader={true}
  rows={
    Array [
      Object {
        "cells": Array [
          "sit",
          "amet",
          2,
          "loremIpsum",
        ],
        "expandedContent": undefined,
      },
    ]
  }
  summary={null}
  t={[Function]}
  variant="compact"
/>
`;

exports[`InventoryList Component should handle updating sorting through redux state: dispatch filter 1`] = `
Array [
  Array [
    Array [
      Object {
        "dir": "asc",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_dir",
        "viewId": "lorem",
      },
      Object {
        "sort": "sockets",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "dir": "desc",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_dir",
        "viewId": "lorem",
      },
      Object {
        "sort": "sockets",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
  Array [
    Array [
      Object {
        "dir": "asc",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_dir",
        "viewId": "lorem",
      },
      Object {
        "sort": "sockets",
        "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
]
`;

exports[`InventoryList Component should handle variations in data: filtered data 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader>
      <CardActions
        className=""
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_HOSTS_INVENTORY_limit"
          offsetDefault={0}
          offsetType="SET_QUERY_RHSM_HOSTS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          query={
            Object {
              "limit": 10,
              "offset": 0,
            }
          }
          variant={null}
          viewId="inventoryList"
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={
            Array [
              Object {
                "title": "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
                "transforms": Array [],
              },
            ]
          }
          isHeader={true}
          rows={
            Array [
              Object {
                "cells": Array [
                  Object {
                    "title": "ipsum",
                  },
                ],
                "expandedContent": undefined,
              },
              Object {
                "cells": Array [
                  Object {
                    "title": "sit",
                  },
                ],
                "expandedContent": undefined,
              },
            ]
          }
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_HOSTS_INVENTORY_limit"
          offsetDefault={0}
          offsetType="SET_QUERY_RHSM_HOSTS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          query={
            Object {
              "limit": 10,
              "offset": 0,
            }
          }
          variant={null}
          viewId="inventoryList"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryList Component should handle variations in data: variable data 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader>
      <CardActions
        className=""
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_HOSTS_INVENTORY_limit"
          offsetDefault={0}
          offsetType="SET_QUERY_RHSM_HOSTS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          query={
            Object {
              "limit": 10,
              "offset": 0,
            }
          }
          variant={null}
          viewId="inventoryList"
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={
            Array [
              "t(curiosity-inventory.header, {\\"context\\":\\"lorem\\"})",
              "t(curiosity-inventory.header, {\\"context\\":\\"dolor\\"})",
            ]
          }
          isHeader={true}
          rows={
            Array [
              Object {
                "cells": Array [
                  "ipsum",
                  "sit",
                ],
                "expandedContent": undefined,
              },
              Object {
                "cells": Array [
                  "sit",
                  "amet",
                ],
                "expandedContent": undefined,
              },
            ]
          }
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_HOSTS_INVENTORY_limit"
          offsetDefault={0}
          offsetType="SET_QUERY_RHSM_HOSTS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          query={
            Object {
              "limit": 10,
              "offset": 0,
            }
          }
          variant={null}
          viewId="inventoryList"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryList Component should render a non-connected component: non-connected 1`] = `
<Card
  className="curiosity-inventory-card"
>
  <MinHeight
    key="headerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardHeader>
      <CardActions
        className=""
      >
        <Pagination
          dropDirection="down"
          isCompact={true}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_HOSTS_INVENTORY_limit"
          offsetDefault={0}
          offsetType="SET_QUERY_RHSM_HOSTS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          query={
            Object {
              "limit": 10,
              "offset": 0,
            }
          }
          variant={null}
          viewId="inventoryList"
        />
      </CardActions>
    </CardHeader>
  </MinHeight>
  <MinHeight
    key="bodyMinHeight-10"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardBody>
      <div
        className="fadein"
      >
        <Table
          ariaLabel={null}
          borders={true}
          className="curiosity-inventory-list"
          columnHeaders={Array []}
          isHeader={true}
          rows={Array []}
          summary={null}
          t={[Function]}
          variant="compact"
        />
      </div>
    </CardBody>
  </MinHeight>
  <MinHeight
    key="footerMinHeight"
    minHeight={0}
    updateOnContent={true}
    updateOnResize={true}
  >
    <CardFooter
      className=""
    >
      <TableToolbar
        isFooter={true}
      >
        <Pagination
          dropDirection="up"
          isCompact={false}
          isDisabled={false}
          itemCount={0}
          limitType="SET_QUERY_RHSM_HOSTS_INVENTORY_limit"
          offsetDefault={0}
          offsetType="SET_QUERY_RHSM_HOSTS_INVENTORY_offset"
          perPageDefault={10}
          productId="lorem"
          query={
            Object {
              "limit": 10,
              "offset": 0,
            }
          }
          variant={null}
          viewId="inventoryList"
        />
      </TableToolbar>
    </CardFooter>
  </MinHeight>
</Card>
`;

exports[`InventoryList Component should return an empty render when disabled: disabled component 1`] = `
<Card
  className="curiosity-inventory-card__disabled"
>
  <CardBody>
    <Bullseye>
      t(curiosity-inventory.tab, {"context":"disabled"})
    </Bullseye>
  </CardBody>
</Card>
`;
